| Bug #29652 | csv.test failure: two changes conflict after merge | ||
|---|---|---|---|
| Submitted: | 9 Jul 2007 17:39 | Modified: | 11 Jul 2007 5:17 |
| Reporter: | Timothy Smith | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: CSV | Severity: | S2 (Serious) |
| Version: | 5.1-maint | OS: | Any |
| Assigned to: | Ramil Kalimullin | CPU Architecture: | Any |
| Tags: | pbfail | ||
[9 Jul 2007 17:39]
Timothy Smith
[10 Jul 2007 4:44]
Ramil Kalimullin
Also, there is a strange result set within csv.result: CREATE TABLE bug13894 ( val integer ) ENGINE = CSV; INSERT INTO bug13894 VALUES (5); INSERT INTO bug13894 VALUES (10); INSERT INTO bug13894 VALUES (11); INSERT INTO bug13894 VALUES (10); UPDATE bug13894 SET val=6 WHERE val=10; SELECT * FROM bug13894; val 6 6 Should be 6, 6, 5, 11.
[10 Jul 2007 7:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/30588 ChangeSet@1.2544, 2007-07-10 12:53:43+05:00, ramil@mysql.com +2 -0 Fix for bug #29652: csv.test failure: two changes conflict after merge Problem: we don't take into account the length of the data written to the temporary data file during update on a CSV table. Fix: properly calculate the data file length during update.
[10 Jul 2007 8:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/30589 ChangeSet@1.2544, 2007-07-10 13:09:07+05:00, ramil@mysql.com +3 -0 Fix for bug #29652: csv.test failure: two changes conflict after merge Problem: we don't take into account the length of the data written to the temporary data file during update on a CSV table. Fix: properly calculate the data file length during update.
[10 Jul 2007 8:12]
Sergey Vojtovich
ok to push.
[10 Jul 2007 13:26]
Bugs System
Pushed into 5.1.21-beta
[11 Jul 2007 5:17]
Paul DuBois
Test case change. No changelog entry needed.
