Fix for bug #29652: csv.test failure: two changes conflict after merge

Problem: we don't take into account the length of the data written
to the temporary data file during update on a CSV table.

Fix: properly calculate the data file length during update.